--- a/src/scss/blog/blog-01.scss
+++ b/src/scss/blog/blog-01.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: #69DDCA;
+    // background-color: #69DDCA;
     position: relative;
     overflow: hidden;
     z-index: 0;
