--- a/src/scss/blog-list/grid-item.scss
+++ b/src/scss/blog-list/grid-item.scss
@@ -29,6 +29,7 @@
         position: absolute;
         top: 0;
         width: 100%;
+        object-fit: cover;
     }
     &__info {
         position: absolute;
