--- a/src/scss/blog/blog-01.scss
+++ b/src/scss/blog/blog-01.scss
@@ -37,6 +37,7 @@
     &__img {
         width: 645px;
         height: 556px;
+        object-fit: cover;
     }
     &__title {
         color: #363636;
