--- a/src/scss/blog/blog-02.scss
+++ b/src/scss/blog/blog-02.scss
@@ -7,31 +7,33 @@
     // overflow: hidden;
 
     &__wrap {
-        width: 770px;
+        width: 970px;
         display: flex;
         justify-content: center
     }
-    &__title {
-        color: #363636;
-        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
-        font-size: 30px;
-        font-weight: 700;
-        text-transform: uppercase;
-        line-height: 1.4em;
-        text-align: center;
-    }
-    &__text {
-        // margin-top: 20px;
-        text-align: left;
-        color: #363636;
-        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
-        font-weight: 400;
-        line-height: 30px;
-        font-size: 18px;
-        &:first-child {
-            margin-top: 0;
-        }
+    // &__title {
+    //     color: #363636;
+    //     font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+    //     font-size: 30px;
+    //     font-weight: 700;
+    //     text-transform: uppercase;
+    //     line-height: 1.4em;
+    //     text-align: center;
+    // }
+    &__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         p {
+            &:first-child {
+                margin-top: 0;
+            }
+            color: #363636;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+            font-weight: 400;
+            line-height: 30px;
+            font-size: 18px;
+            max-width: 770px;
             margin-bottom: 20px;
             &:last-child {
                 margin-bottom: 0;
@@ -40,6 +42,42 @@
         a {
             color: #FF009E;
             text-decoration: underline;
+        }
+        h2 {
+            color: #363636;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+            font-size: 30px;
+            font-weight: 700;
+            text-transform: uppercase;
+            line-height: 1.4em;
+            text-align: center;
+            margin-bottom: 60px;
+        }
+        blockquote {
+            margin-bottom: 20px;
+            background: #FFE600;
+            padding: 85px 100px 40px;
+            position: relative;
+            p {
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                font-style: normal;
+                font-weight: 600;
+                font-size: 20px;
+                line-height: 30px;
+                color: #363636;
+            }
+            &::before {
+                content: '“';
+                position: absolute;
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                font-style: normal;
+                font-weight: normal;
+                font-size: 130px;
+                line-height: 155px;
+                color: #FF009E;
+                top: 0;
+                left: 69px;
+            }
         }
     }
     &__info {
@@ -59,9 +97,46 @@
         &__title {
             font-size: 21px;
         }
-        &__text {
-            font-size: 14px;
+        &__content {
+            p {
+                font-size: 14px;
+            }
         }
     }
 
+}
+
+@media (max-width: 768px) {
+    .blog-02 {
+        &__content {
+            blockquote {
+                p {
+                    font-size: 16px;
+                }
+                padding: 60px 70px;
+                &::before {
+                    font-size: 90px;
+                    line-height: 1.5;
+                    left: 30px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .blog-02 {
+        &__content {
+            blockquote {
+                p {
+                    font-size: 15px;
+                }
+                padding: 40px 50px;
+                &::before {
+                    font-size: 70px;
+                    left: 15px;
+                }
+            }
+        }
+    }
 }
