--- a/src/scss/blog/blog-04.scss
+++ b/src/scss/blog/blog-04.scss
@@ -10,73 +10,81 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        max-width: 1024px;
     }
-    &__title {
-        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
-        font-style: normal;
-        font-weight: bold;
-        font-size: 30px;
-        line-height: 130%;
-        text-align: center;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #363636;
-        width: 770px;
-    }
-    &__table-wrap {
+    &__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
-        text-align: center;
-        display: inline-block;
-    }
-    &__table {
-        margin-top: 60px;
-        thead {
-            & > tr {
-                & > td {
-                    padding: 14px 26px 14px 20px;
-                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
-                    font-style: normal;
-                    font-weight: 600;
-                    font-size: 15px;
-                    line-height: 130%;
-                    color: #363636;
-                    &:first-child {
-                        border-radius: 5px 0 0 0;
-                    }
-                    &:last-child {
-                        border-radius: 0 5px 0 0;
+        figure.table {
+            width: 100%;
+            text-align: center;
+            display: inline-block;
+        }
+        h2 {
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+            font-style: normal;
+            font-weight: bold;
+            font-size: 30px;
+            line-height: 130%;
+            text-align: center;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: #363636;
+            width: 770px;
+        }
+        table {
+            margin-top: 60px;
+            border-spacing: 0;
+            thead {
+                & > tr {
+                    & > th {
+                        padding: 14px 26px 14px 20px;
+                        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 15px;
+                        line-height: 130%;
+                        color: #363636;
+                        &:first-child {
+                            border-radius: 5px 0 0 0;
+                        }
+                        &:last-child {
+                            border-radius: 0 5px 0 0;
+                        }
                     }
                 }
             }
-        }
-        tbody {
-            & > tr {
-                background-color: #F4F4F4;
-                &:nth-child(2n) {
-                    background-color: #fff;
-                }
-                &:last-child {
-                    color: #363636;
-                    & > td {
-                        &:first-child {
-                            border-radius: 0 0 0 5px;
-                        }
-                        &:last-child {
-                            border-radius: 0 0 5px 0;
+            tbody {
+                & > tr {
+                    background-color: #F4F4F4;
+                    &:nth-child(2n) {
+                        background-color: #fff;
+                    }
+                    &:last-child {
+                        color: #363636;
+                        & > td {
+                            &:first-child {
+                                border-radius: 0 0 0 5px;
+                            }
+                            &:last-child {
+                                border-radius: 0 0 5px 0;
+                            }
                         }
                     }
-                }
-                & > td {
-                    padding: 14px 26px 14px 20px;
-                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
-                    font-style: normal;
-                    font-weight: normal;
-                    font-size: 16px;
-                    line-height: 130%;
-                    color: #363636;
-                    &:first-child {
-                        font-weight: 600;
-                        font-size: 15px;
+                    & > td {
+                        padding: 14px 26px 14px 20px;
+                        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 16px;
+                        line-height: 130%;
+                        color: #363636;
+                        &:first-child {
+                            font-weight: 600;
+                            font-size: 15px;
+                        }
                     }
                 }
             }
@@ -102,16 +110,20 @@
 }
 @media (max-width: 770px) {
     .blog-04 {
-        &__title {
-            width: auto;
+        &__content {
+            h2 {
+                width: auto;
+            }
         }
     }
 }
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
 
     .blog-04  {
-        &__table-wrap {
-            overflow-y: auto;
+        &__content {
+            figure.table {
+                overflow-y: auto;
+            }
         }
     }
 
