--- a/src/scss/blog-list/grid-item.scss
+++ b/src/scss/blog-list/grid-item.scss
@@ -84,6 +84,7 @@
         margin-top: 21px;
         transform: translateY(200%);
         transition: all .4s ease;
+        cursor: pointer;
     }
 }
 
