--- a/src/scss/blog/blog-03.scss
+++ b/src/scss/blog/blog-03.scss
@@ -31,7 +31,7 @@
     }
     &__wrap {
         width: 768px;
-        margin: 215px 0 200px 0;
+        margin: 200px 0;
     }
     &__row {
         display: flex;
