--- a/src/scss/blog/blog-04.scss
+++ b/src/scss/blog/blog-04.scss
@@ -4,13 +4,38 @@
     justify-content: center;
     margin: 56px 0;
     position: relative;
-    // overflow: hidden;
+    overflow: hidden;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-top: 120px solid #fff;
+        border-right: 100vw solid transparent;
+        background: 0 0;
+        z-index: 0;
+    }
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-bottom: 120px solid #fff;
+        border-left: 100vw solid transparent;
+        background: 0 0;
+        z-index: 0;
+    }
 
     &__wrap {
         display: flex;
         flex-direction: column;
         align-items: center;
         max-width: 1024px;
+        margin: 200px 0;
     }
     &__content {
         display: flex;
