--- a/src/scss/blog/blog-07.scss
+++ b/src/scss/blog/blog-07.scss
@@ -31,7 +31,7 @@
     }
     &__wrap {
         width: 1100px;
-        margin: 180px 0 200px 0;
+        margin: 200px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
